add a DASBOARD page and linked menu into other page

--- a/style/style.css
+++ b/style/style.css
@@ -14,11 +14,13 @@ li:hover{
     color: aqua;
 }
 .sidebar{
+    overflow-x: hidden;
+    position: fixed;
     border-top: 1px solid black;
     padding: 25px;
-    position: absolute;
+    /* position: absolute; */
     background-color: #3B3486;
-    z-index: 1000;
+    z-index: 1;
     top: 0;
     left: 0;
     bottom: 0;
@@ -34,9 +36,29 @@ li:hover{
     z-index: 1000
 } */
 .main {
-    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    padding-top: 50px;
+    padding-left: 300px;
+    padding-right: 50px;
     overflow: hidden;
     min-height: 100vh;
     width: 100%;
     background-color: #fafbfe;
+}
+
+.greeting {
+    text-align: center;
+    padding-top: 37px;
+    font-size: 30px;
+}
+
+.card { 
+    margin: 15px;
+}
+
+.card-text {
+    margin-bottom: 2px;
+    margin-top: 20px;
+    color: #0766AD;
+    font-size: 4em;
 }
