--- a/style/style.css
+++ b/style/style.css
@@ -49,7 +49,7 @@ li:hover{
 
 .greeting {
     text-align: center;
-    padding-top: 37px;
+    /* padding-top: 37px; */
     font-size: 30px;
     color: #0766AD;
 }
