change hover style for class title

--- a/style/style.css
+++ b/style/style.css
@@ -79,6 +79,10 @@ li:hover{
 
 
 /* Class Style */
+.name-link:hover {
+    text-decoration: underline !important;
+    color: white;
+}
 
 .bg {
     /* opacity: 30%; */
