--- a/style/login.css
+++ b/style/login.css
@@ -2,9 +2,16 @@ body, html {
     height: 100%;
 }
 .container-fluid {
+    padding-top: 40px;
     height: 100%;
     background-size: cover;
     background-image: linear-gradient(#8b82e7,#6631c2);
+}
+
+.alert {
+    border-radius: 15px;
+    height: 2rem;
+    margin-bottom: 7rem;
 }
 
 .form-control, .card {
