--- a/style/login.css
+++ b/style/login.css
@@ -1,11 +1,12 @@
 body, html {
-    height: 100%;
+    height: 100% !important;
 }
+
 .container-fluid {
-    padding-top: 40px;
-    height: 100%;
-    background-size: cover;
-    background-image: linear-gradient(#8b82e7,#6631c2);
+    padding-top:100%;
+    height: 100% !important;
+    background-size: cover !important;
+    background-image: linear-gradient(#8b82e7,#6631c2) !important;
 }
 
 .alert {
@@ -23,7 +24,7 @@ body, html {
     padding-right: 2.6rem;
 }
 
-.icon {
+.icon-login {
     color: #6631c2;
     padding: 10px;
     z-index: 1;
