--- a/style/style.css
+++ b/style/style.css
@@ -218,3 +218,29 @@ input[type="file"] {
   height: 3rem;
   margin-top: -4px;
 }
+
+/* profile style */
+.profile-content {
+  margin-top: 40px;
+}
+.profile-picture img {
+  border-radius: 50%;
+}
+
+.sub {
+  display: flex;
+}
+.sub-bio {
+  width: 130px;
+  padding-top: 20px;
+  font-weight: bold;
+}
+.biodata {
+  margin-left: 140px;
+  margin-top: 5 0px;
+}
+
+.data {
+  padding-left: 20px;
+  padding-top: 20px;
+}
